--- a/edm-front/package.json
+++ b/edm-front/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.21.4",
     "core-js": "^3.6.5",
+    "element-plus": "^1.1.0-beta.20",
     "vue": "^3.0.0"
   },
   "devDependencies": {
